--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-three/drei": "^8.12.1",
     "@react-three/fiber": "^8.18.0",
     "@types/three": "^0.175.0",
+    "base-64": "^1.0.0",
     "date-fns": "^4.1.0",
     "expo": "~52.0.43",
     "expo-asset": "~11.0.5",
