--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-three/drei": "^8.12.1",
     "@react-three/fiber": "^8.18.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "@types/three": "^0.175.0",
     "base-64": "^1.0.0",
     "date-fns": "^4.1.0",
@@ -55,8 +56,11 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "three": "^0.166.1",
-    "three-stdlib": "^2.35.14"
+    "three-stdlib": "^2.35.14",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
