--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/material-top-tabs": "^7.2.8",
@@ -26,6 +27,7 @@
     "@types/three": "^0.175.0",
     "base-64": "^1.0.0",
     "date-fns": "^4.1.0",
+    "eas-cli": "^16.2.1",
     "expo": "~52.0.43",
     "expo-asset": "~11.0.5",
     "expo-blur": "~14.0.3",
@@ -59,8 +61,7 @@
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "three": "^0.166.1",
-    "three-stdlib": "^2.35.14",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "three-stdlib": "^2.35.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
